<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="24dp"
    android:orientation="vertical"
    tools:context="com.example.shubhampratap.rideapp.GiveLiftActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_layout"
        android:backgroundTint="#efefef">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/you_are_available"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/sourceCurrent"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="2dp"
                android:text="@string/use_map"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/from"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sourceEdit"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_background"
                    android:backgroundTint="?android:attr/colorBackground"
                    android:ems="10"
                    android:hint="@string/enter_source_location"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColorHint="?android:attr/colorPrimaryDark"
                    android:textStyle="italic" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/destCurrent"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/use_map"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/to"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/destEdit"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_background"
                    android:backgroundTint="?android:attr/colorBackground"
                    android:ems="10"
                    android:hint="@string/enter_destination_location"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textStyle="italic" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/person_s"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/personSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/beg_s"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/begSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/picback"
                android:backgroundTint="@android:color/holo_red_light"
                android:elevation="17dp"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/search"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>
