<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picback"
    tools:context="com.example.shubhampratap.rideapp.ForgetResetActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarforget"
        android:padding="12dp"
        android:text="@string/varification_process"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/textView12"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimaryDark" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view6"
        android:layout_margin="10dp"
        android:background="@drawable/back"
        android:backgroundTint="?attr/colorControlHighlight"
        android:elevation="19dp">

        <LinearLayout
            android:id="@+id/emailBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/emailEditforget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:backgroundTint="?attr/colorControlHighlight"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHint="@android:color/white"
                android:textStyle="bold|italic"
                android:typeface="monospace" />

            <Button
                android:id="@+id/emailButton"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:backgroundTint="@android:color/holo_red_light"
                android:elevation="21dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/send_verification_code"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/otpBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/otp"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:backgroundTint="?attr/colorControlHighlight"
                android:ems="10"
                android:hint="@string/one_time_password"
                android:inputType="number|numberSigned"
                android:padding="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/otpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_layout"
                android:backgroundTint="@android:color/holo_green_light"
                android:elevation="24dp"
                android:fontFamily="serif"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="NEXT STEP"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordBlockforget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/npedit"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:backgroundTint="?android:attr/colorControlHighlight"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/new_password_6_10_digit"
                android:inputType="textPassword"
                android:maxLength="10"
                android:padding="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/cpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/take_button"
                android:backgroundTint="#794e45"
                android:elevation="19dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
