<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:backgroundTint="#009688"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="35dp"
    tools:context="com.example.shubhampratap.rideapp.IndexActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@drawable/logo"
        app:civ_border_color="#8b000000"
        app:civ_border_overlay="false"
        app:civ_border_width="2dp" />

    <Button
        android:id="@+id/loginButton"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:elevation="24dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="10sp"
        android:padding="20dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="monospace" />

    <Button
        android:id="@+id/signupButton"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.9"
        android:background="@android:color/holo_red_light"
        android:elevation="24dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="10sp"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="monospace" />

    <Button
        android:id="@+id/forgetTextview"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|right|end"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom|end"
        android:padding="5dp"
        android:text="@string/forget_reset_password"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


    <View
        android:layout_width="220dp"
        android:layout_height="2dp"
        android:layout_gravity="end"
        android:background="#364843" />

</LinearLayout>
